# HiFiNet

./: .gitignore  .gitmodules  README.md  model.py  pylock.toml  pyproject.toml  run.py  svm.py
hifinet/: cli.py  config.py  data.py  inject.py  loader.py  trainer.py
hifinet/adapter/: base.py  intel.py  opensense.py
hifinet/commands/: inject.py
hifinet/data/: __init__.py  engineer.py  split.py
hifinet/fault/: __init__.py  base.py  injector.py  trainer.py  type.py
hifinet/model/: __init__.py  feature_extractor.py  random_forest.py
src/: config.py  utils.py
src/dataset/: __init__.py  args.py  filter.py  loader.py
src/dproc/: __init__.py  data_filter.py  data_loader.py
src/fault/: base.py  base_fault.py  fault.py  type.py
src/inject/: base_fault.py  fault.py
tests/: fault_test.py
