[project]
name = "HiFiNet"
version = "0.3.0"
description = "The central package for HiFiNet"
authors = [
    {name = "Nguyen Tri Nghia", email = "nghiant@mailbox.org"},
]
dependencies = [
	"pandas",
	"numpy",
	"typer",
	"loguru",
	"pydantic",
	"pandera"
]
requires-python = "==3.12.*"
readme = "README.md"
license = "MIT"

[dependency-groups]
lint = [
	"ruff"
]
lsp = [
	"pandas-stubs"
]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "B", "UP", "SIM", "N", "Q"]
 
[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
include = ["hifinet"]

[project.scripts]
hifinet = "hifinet.cli:app"
