[project]
name = "HiFiNet"
version = "0.4.0"
description = "The central package for HiFiNet"
authors = [
    {name = "Nguyen Tri Nghia", email = "nghiant@mailbox.org"},
]
dependencies = [
	"pandas>=2.3.2",
	"numpy>=2.3.3",
	"typer>=0.17.4",
	"loguru>=0.7.3",
	"pydantic>=2.11.7",
	"pandera>=0.26.1",
	"scikit-learn>=1.7.2"
]
requires-python = "==3.12.*"
readme = "README.md"
license = "MIT"

[dependency-groups]
lint = [
	"ruff"
]
lsp = [
	"pandas-stubs"
]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "B", "UP", "SIM", "N", "Q"]
 
[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
include = ["hifinet"]

[project.scripts]
hifinet = "hifinet.cli:app"
