[project]
name = "HiFiNet"
version = "0.4.0"
description = "The central package for HiFiNet"
authors = [
    {name = "Nguyen Tri Nghia", email = "nghiant@mailbox.org"},
]
requires-python = "==3.10.*"
readme = "README.md"
license = "MIT"
dependencies = [
	"tsfresh>=0.21.1", 
	"numpy>=2.2.6", 
	"typer>=0.17.4", 
	"loguru>=0.7.3", 
	"scikit-learn>=1.7.2", 
	"pandera>=0.26.1", 
	"pydantic>=2.11.8", 
	"pandas>=2.3.2"
]

[dependency-groups]
dev = [
	"ruff",
	"pandas-stubs"
]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "B", "UP", "SIM", "N", "Q"]
 
[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
include = ["hifinet"]

[project.scripts]
hifinet = "hifinet.cli:app"
